--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ repository/
 04_Dynamic/target/
 05_Transaction/.settings/
 05_Transaction/target/
+06_Property/.settings/
+06_Property/target/classes/kr/co/goodee/dao/login_mapper.xml
+06_Property/target/
