--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ repository/
 09_RestfulRequest/target/
 10_RealTime/.settings/
 10_RealTime/target/
+11_FileService/.settings/
+11_FileService/target/
