--- a/11_FileService/pom.xml
+++ b/11_FileService/pom.xml
@@ -99,6 +99,21 @@
 		    <version>2.6</version>
 		</dependency>
 		
+		<!-- jackson 이 없으면 @RestController 를 사용 해도 클라이언트로 json 형태로 변환이 되지 않는다.(ResponseBody도) -->
+		<!-- jackson-databind-->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.4</version>
+		</dependency>
+
+		<!-- jackson-core-->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.9.4</version>
+		</dependency>
+		
 				
 		<!-- AspectJ -->
 		<dependency>
